--- a/index.html
+++ b/index.html
@@ -148,6 +148,11 @@
                     <span>Start Analysis</span>
                 </button>
             </form>
+
+            <!-- Rate Limit Info -->
+            <div id="rateLimitInfo" class="hidden mt-4 p-4 rounded-xl bg-slate-100/50 dark:bg-slate-800/50 border border-slate-200 dark:border-slate-700">
+                <!-- Populated dynamically by JavaScript -->
+            </div>
         </div>
 
         <!-- Loading State -->
