Add all PR counts to dashboard and update display logic for ratios

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                             </svg>
                         </div>
                         <p class="text-sm font-medium text-slate-600 dark:text-slate-300 mb-1">Total PRs</p>
-                        <p id="totalPRs" class="text-4xl font-bold text-slate-800 dark:text-slate-100">0</p>
+                        <div id="totalPRs" class="flex items-baseline"><span class="text-4xl font-bold text-slate-800 dark:text-slate-100">0</span></div>
                     </div>
                 </div>
 
@@ -225,7 +225,7 @@
                             <span class="px-2 py-1 rounded-full text-xs font-bold bg-green-100 dark:bg-green-900/30 text-green-700 dark:text-green-300">Success</span>
                         </div>
                         <p class="text-sm font-medium text-slate-600 dark:text-slate-300 mb-1">Merged</p>
-                        <p id="mergedPRs" class="text-4xl font-bold text-green-700 dark:text-green-400">0</p>
+                        <div id="mergedPRs" class="flex items-baseline"><span class="text-4xl font-bold text-green-700 dark:text-green-400">0</span></div>
                     </div>
                 </div>
 
@@ -244,7 +244,7 @@
                             <span class="px-2 py-1 rounded-full text-xs font-bold bg-red-100 dark:bg-red-900/30 text-red-700 dark:text-red-300">Not Adopted</span>
                         </div>
                         <p class="text-sm font-medium text-slate-600 dark:text-slate-300 mb-1">Closed</p>
-                        <p id="closedPRs" class="text-4xl font-bold text-red-600 dark:text-red-400">0</p>
+                        <div id="closedPRs" class="flex items-baseline"><span class="text-4xl font-bold text-red-600 dark:text-red-400">0</span></div>
                     </div>
                 </div>
 
@@ -263,7 +263,7 @@
                             <span class="px-2 py-1 rounded-full text-xs font-bold bg-blue-100 dark:bg-blue-900/30 text-blue-700 dark:text-blue-300">In Progress</span>
                         </div>
                         <p class="text-sm font-medium text-slate-600 dark:text-slate-300 mb-1">Open</p>
-                        <p id="openPRs" class="text-4xl font-bold text-blue-600 dark:text-blue-400">0</p>
+                        <div id="openPRs" class="flex items-baseline"><span class="text-4xl font-bold text-blue-600 dark:text-blue-400">0</span></div>
                     </div>
                 </div>
             </div>
