Implement pagination for PR list and add corresponding tests

--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@
                     <h2 class="text-2xl font-bold text-slate-800 dark:text-slate-100">PR List</h2>
                 </div>
                 <div id="prList" class="space-y-3"></div>
+                <div id="prPagination"></div>
             </div>
         </div>
     </main>
