--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
             <!-- Stats Grid -->
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
                 <!-- Total PRs -->
+                <div class="tooltip" data-tooltip="GitHub Copilot Coding Agent が作成した全 PR の合計数">
                 <div class="glass-card rounded-2xl p-6 relative overflow-hidden">
                     <div class="absolute top-0 right-0 w-32 h-32 bg-linear-to-br from-indigo-500/10 to-purple-500/10 rounded-full -translate-y-16 translate-x-16"></div>
                     <div class="relative">
@@ -210,8 +211,10 @@
                         <div id="totalPRs" class="flex items-baseline"><span class="text-4xl font-bold text-slate-800 dark:text-slate-100">0</span></div>
                     </div>
                 </div>
+                </div>
 
                 <!-- Merged PRs -->
+                <div class="tooltip" data-tooltip="マージされた PR の数">
                 <div class="glass-card rounded-2xl p-6 relative overflow-hidden">
                     <div class="absolute top-0 right-0 w-32 h-32 bg-linear-to-br from-green-500/10 to-emerald-500/10 rounded-full -translate-y-16 translate-x-16"></div>
                     <div class="relative">
@@ -228,8 +231,10 @@
                         <div id="mergedPRs" class="flex items-baseline"><span class="text-4xl font-bold text-green-700 dark:text-green-400">0</span></div>
                     </div>
                 </div>
+                </div>
 
                 <!-- Closed PRs -->
+                <div class="tooltip" data-tooltip="マージされずにクローズされた PR の数">
                 <div class="glass-card rounded-2xl p-6 relative overflow-hidden">
                     <div class="absolute top-0 right-0 w-32 h-32 bg-linear-to-br from-red-500/10 to-rose-500/10 rounded-full -translate-y-16 translate-x-16"></div>
                     <div class="relative">
@@ -247,8 +252,10 @@
                         <div id="closedPRs" class="flex items-baseline"><span class="text-4xl font-bold text-red-600 dark:text-red-400">0</span></div>
                     </div>
                 </div>
+                </div>
 
                 <!-- Open PRs -->
+                <div class="tooltip" data-tooltip="現在オープン中の PR の数">
                 <div class="glass-card rounded-2xl p-6 relative overflow-hidden">
                     <div class="absolute top-0 right-0 w-32 h-32 bg-linear-to-br from-blue-500/10 to-cyan-500/10 rounded-full -translate-y-16 translate-x-16"></div>
                     <div class="relative">
@@ -265,6 +272,7 @@
                         <p class="text-sm font-medium text-slate-600 dark:text-slate-300 mb-1">Open</p>
                         <div id="openPRs" class="flex items-baseline"><span class="text-4xl font-bold text-blue-600 dark:text-blue-400">0</span></div>
                     </div>
+                </div>
                 </div>
             </div>
 
