--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                 </div>
                 <div class="space-y-3">
                     <div class="relative h-12 bg-slate-200 dark:bg-slate-700 rounded-full overflow-hidden">
-                        <div id="mergeRateBar" class="h-full bg-linear-to-r from-green-500 to-emerald-500 rounded-full flex items-center justify-center text-white font-bold" style="width: 0%">
+                        <div id="mergeRateBar" class="h-full bg-linear-to-r from-green-500 to-emerald-500 rounded-full flex items-center justify-center text-white font-bold">
                             <span id="mergeRateText" class="relative z-10">0%</span>
                         </div>
                     </div>
