Update tooltip text to English for consistency across PR statistics

--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
             <!-- Stats Grid -->
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
                 <!-- Total PRs -->
-                <div class="tooltip" tabindex="0" role="group" aria-describedby="tooltip-total-prs" data-tooltip="GitHub Copilot Coding Agent が作成した全 PR の合計数">
-                <span id="tooltip-total-prs" class="sr-only">GitHub Copilot Coding Agent が作成した全 PR の合計数</span>
+                <div class="tooltip" tabindex="0" role="group" aria-describedby="tooltip-total-prs" data-tooltip="Total number of PRs created by GitHub Copilot Coding Agent">
+                <span id="tooltip-total-prs" class="sr-only">Total number of PRs created by GitHub Copilot Coding Agent</span>
                 <div class="glass-card rounded-2xl p-6 relative overflow-hidden">
                     <div class="absolute top-0 right-0 w-32 h-32 bg-linear-to-br from-indigo-500/10 to-purple-500/10 rounded-full -translate-y-16 translate-x-16"></div>
                     <div class="relative">
@@ -215,8 +215,8 @@
                 </div>
 
                 <!-- Merged PRs -->
-                <div class="tooltip" tabindex="0" role="group" aria-describedby="tooltip-merged-prs" data-tooltip="マージされた PR の数">
-                <span id="tooltip-merged-prs" class="sr-only">マージされた PR の数</span>
+                <div class="tooltip" tabindex="0" role="group" aria-describedby="tooltip-merged-prs" data-tooltip="Number of merged PRs">
+                <span id="tooltip-merged-prs" class="sr-only">Number of merged PRs</span>
                 <div class="glass-card rounded-2xl p-6 relative overflow-hidden">
                     <div class="absolute top-0 right-0 w-32 h-32 bg-linear-to-br from-green-500/10 to-emerald-500/10 rounded-full -translate-y-16 translate-x-16"></div>
                     <div class="relative">
@@ -236,8 +236,8 @@
                 </div>
 
                 <!-- Closed PRs -->
-                <div class="tooltip" tabindex="0" role="group" aria-describedby="tooltip-closed-prs" data-tooltip="マージされずにクローズされた PR の数">
-                <span id="tooltip-closed-prs" class="sr-only">マージされずにクローズされた PR の数</span>
+                <div class="tooltip" tabindex="0" role="group" aria-describedby="tooltip-closed-prs" data-tooltip="Number of PRs closed without merging">
+                <span id="tooltip-closed-prs" class="sr-only">Number of PRs closed without merging</span>
                 <div class="glass-card rounded-2xl p-6 relative overflow-hidden">
                     <div class="absolute top-0 right-0 w-32 h-32 bg-linear-to-br from-red-500/10 to-rose-500/10 rounded-full -translate-y-16 translate-x-16"></div>
                     <div class="relative">
@@ -258,8 +258,8 @@
                 </div>
 
                 <!-- Open PRs -->
-                <div class="tooltip" tabindex="0" role="group" aria-describedby="tooltip-open-prs" data-tooltip="現在オープン中の PR の数">
-                <span id="tooltip-open-prs" class="sr-only">現在オープン中の PR の数</span>
+                <div class="tooltip" tabindex="0" role="group" aria-describedby="tooltip-open-prs" data-tooltip="Number of currently open PRs">
+                <span id="tooltip-open-prs" class="sr-only">Number of currently open PRs</span>
                 <div class="glass-card rounded-2xl p-6 relative overflow-hidden">
                     <div class="absolute top-0 right-0 w-32 h-32 bg-linear-to-br from-blue-500/10 to-cyan-500/10 rounded-full -translate-y-16 translate-x-16"></div>
                     <div class="relative">
