--- a/index.html
+++ b/index.html
@@ -190,6 +190,8 @@
             <!-- Stats Grid -->
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
                 <!-- Total PRs -->
+                <div class="tooltip" tabindex="0" role="group" aria-describedby="tooltip-total-prs" data-tooltip="Total number of PRs created by GitHub Copilot Coding Agent">
+                <span id="tooltip-total-prs" class="sr-only">Total number of PRs created by GitHub Copilot Coding Agent</span>
                 <div class="glass-card rounded-2xl p-6 relative overflow-hidden">
                     <div class="absolute top-0 right-0 w-32 h-32 bg-linear-to-br from-indigo-500/10 to-purple-500/10 rounded-full -translate-y-16 translate-x-16"></div>
                     <div class="relative">
@@ -210,8 +212,11 @@
                         <div id="totalPRs" class="flex items-baseline"><span class="text-4xl font-bold text-slate-800 dark:text-slate-100">0</span></div>
                     </div>
                 </div>
+                </div>
 
                 <!-- Merged PRs -->
+                <div class="tooltip" tabindex="0" role="group" aria-describedby="tooltip-merged-prs" data-tooltip="Number of merged PRs">
+                <span id="tooltip-merged-prs" class="sr-only">Number of merged PRs</span>
                 <div class="glass-card rounded-2xl p-6 relative overflow-hidden">
                     <div class="absolute top-0 right-0 w-32 h-32 bg-linear-to-br from-green-500/10 to-emerald-500/10 rounded-full -translate-y-16 translate-x-16"></div>
                     <div class="relative">
@@ -228,8 +233,11 @@
                         <div id="mergedPRs" class="flex items-baseline"><span class="text-4xl font-bold text-green-700 dark:text-green-400">0</span></div>
                     </div>
                 </div>
+                </div>
 
                 <!-- Closed PRs -->
+                <div class="tooltip" tabindex="0" role="group" aria-describedby="tooltip-closed-prs" data-tooltip="Number of PRs closed without merging">
+                <span id="tooltip-closed-prs" class="sr-only">Number of PRs closed without merging</span>
                 <div class="glass-card rounded-2xl p-6 relative overflow-hidden">
                     <div class="absolute top-0 right-0 w-32 h-32 bg-linear-to-br from-red-500/10 to-rose-500/10 rounded-full -translate-y-16 translate-x-16"></div>
                     <div class="relative">
@@ -247,8 +255,11 @@
                         <div id="closedPRs" class="flex items-baseline"><span class="text-4xl font-bold text-red-600 dark:text-red-400">0</span></div>
                     </div>
                 </div>
+                </div>
 
                 <!-- Open PRs -->
+                <div class="tooltip" tabindex="0" role="group" aria-describedby="tooltip-open-prs" data-tooltip="Number of currently open PRs">
+                <span id="tooltip-open-prs" class="sr-only">Number of currently open PRs</span>
                 <div class="glass-card rounded-2xl p-6 relative overflow-hidden">
                     <div class="absolute top-0 right-0 w-32 h-32 bg-linear-to-br from-blue-500/10 to-cyan-500/10 rounded-full -translate-y-16 translate-x-16"></div>
                     <div class="relative">
@@ -265,6 +276,7 @@
                         <p class="text-sm font-medium text-slate-600 dark:text-slate-300 mb-1">Open</p>
                         <div id="openPRs" class="flex items-baseline"><span class="text-4xl font-bold text-blue-600 dark:text-blue-400">0</span></div>
                     </div>
+                </div>
                 </div>
             </div>
 
@@ -285,7 +297,7 @@
                 </div>
                 <div class="space-y-3">
                     <div class="relative h-12 bg-slate-200 dark:bg-slate-700 rounded-full overflow-hidden">
-                        <div id="mergeRateBar" class="h-full bg-linear-to-r from-green-500 to-emerald-500 rounded-full flex items-center justify-center text-white font-bold" style="width: 0%">
+                        <div id="mergeRateBar" class="h-full bg-linear-to-r from-green-500 to-emerald-500 rounded-full flex items-center justify-center text-white font-bold">
                             <span id="mergeRateText" class="relative z-10">0%</span>
                         </div>
                     </div>
