fix: address Copilot code review feedback
- Remove unused variables (index param, phase counter)
- Use createSearchResponse helper instead of manual API mapping
- Add progress bar value assertions for pagination test
- Add cache loading verification assertions
- Simplify verbose implementation-detail comment
- Add loading title assertion for repository stats phase
- Add ARIA progressbar attributes for accessibility (role, aria-valuenow, etc.)
- Update aria-valuenow in updateLoadingProgress and resetLoadingProgress

--- a/index.html
+++ b/index.html
@@ -167,7 +167,16 @@
                 <!-- Progress Bar -->
                 <div id="loadingProgress" class="mt-6 hidden">
                     <div class="relative h-3 bg-slate-200 dark:bg-slate-700 rounded-full overflow-hidden">
-                        <div id="loadingProgressBar" class="h-full bg-linear-to-r from-indigo-500 to-purple-500 rounded-full transition-all duration-300" style="width: 0%"></div>
+                        <div
+                            id="loadingProgressBar"
+                            class="h-full bg-linear-to-r from-indigo-500 to-purple-500 rounded-full transition-all duration-300"
+                            style="width: 0%"
+                            role="progressbar"
+                            aria-valuemin="0"
+                            aria-valuemax="100"
+                            aria-valuenow="0"
+                            aria-describedby="loadingProgressText"
+                        ></div>
                     </div>
                     <p id="loadingProgressText" class="text-xs text-slate-500 dark:text-slate-400 mt-2"></p>
                 </div>
