--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
                             aria-valuemax="100"
                             aria-valuenow="0"
                             aria-describedby="loadingProgressText"
+                            aria-label="Loading progress"
                         ></div>
                     </div>
                     <p id="loadingProgressText" class="text-xs text-slate-500 dark:text-slate-400 mt-2"></p>
