--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                 <div class="relative w-20 h-20 mx-auto mb-6">
                     <div class="loader-ring absolute inset-0 border-t-indigo-500 dark:border-t-pink-400"></div>
                 </div>
-                <p id="loadingTitle" class="text-lg font-semibold text-slate-700 dark:text-slate-200">Fetching data...</p>
-                <p id="loadingMessage" class="text-sm text-slate-600 dark:text-slate-300 mt-2">Loading PR information from GitHub API</p>
+                <p id="loadingTitle" class="text-lg font-semibold text-slate-700 dark:text-slate-200" aria-live="polite" aria-atomic="true">Fetching data...</p>
+                <p id="loadingMessage" class="text-sm text-slate-600 dark:text-slate-300 mt-2" aria-live="polite" aria-atomic="true">Loading PR information from GitHub API</p>
 
                 <!-- Progress Bar -->
                 <div id="loadingProgress" class="mt-6 hidden">
