--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
                         class="w-full px-4 py-3 rounded-xl bg-white/50 dark:bg-slate-800/50 border-2 border-slate-200 dark:border-slate-700 focus:border-indigo-500 dark:focus:border-indigo-400 focus:ring-4 focus:ring-indigo-500/10 transition-all outline-none"
                         required
                     >
+                    <div class="flex items-center gap-2 mt-2 flex-wrap">
+                        <span class="text-xs text-slate-500 dark:text-slate-400">Popular:</span>
+                        <button type="button" class="preset-repo-btn px-2.5 py-1 rounded-lg text-xs font-medium bg-slate-100 dark:bg-slate-800 text-slate-700 dark:text-slate-300 hover:bg-indigo-100 dark:hover:bg-indigo-900/30 hover:text-indigo-700 dark:hover:text-indigo-300 border border-slate-200 dark:border-slate-700 hover:border-indigo-300 dark:hover:border-indigo-600 transition-colors cursor-pointer" data-repo="microsoft/vscode">microsoft/vscode</button>
+                        <button type="button" class="preset-repo-btn px-2.5 py-1 rounded-lg text-xs font-medium bg-slate-100 dark:bg-slate-800 text-slate-700 dark:text-slate-300 hover:bg-indigo-100 dark:hover:bg-indigo-900/30 hover:text-indigo-700 dark:hover:text-indigo-300 border border-slate-200 dark:border-slate-700 hover:border-indigo-300 dark:hover:border-indigo-600 transition-colors cursor-pointer" data-repo="microsoft/typespec">microsoft/typespec</button>
+                        <button type="button" class="preset-repo-btn px-2.5 py-1 rounded-lg text-xs font-medium bg-slate-100 dark:bg-slate-800 text-slate-700 dark:text-slate-300 hover:bg-indigo-100 dark:hover:bg-indigo-900/30 hover:text-indigo-700 dark:hover:text-indigo-300 border border-slate-200 dark:border-slate-700 hover:border-indigo-300 dark:hover:border-indigo-600 transition-colors cursor-pointer" data-repo="Azure/azure-sdk-for-net">Azure/azure-sdk-for-net</button>
+                    </div>
                 </div>
 
                 <!-- Date Range -->
