--- a/index.html
+++ b/index.html
@@ -365,6 +365,32 @@
                     </div>
                     <h2 class="text-2xl font-bold text-slate-800 dark:text-slate-100">PR List</h2>
                 </div>
+
+                <!-- Filter Controls -->
+                <div id="prFilters" class="mb-6 space-y-4">
+                    <!-- Text Search -->
+                    <div class="relative">
+                        <svg class="absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 text-slate-400 dark:text-slate-500 pointer-events-none" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                            <circle cx="11" cy="11" r="8"></circle>
+                            <path d="m21 21-4.35-4.35"></path>
+                        </svg>
+                        <input
+                            type="text"
+                            id="prSearchInput"
+                            placeholder="Search PRs by title..."
+                            class="w-full pl-10 pr-4 py-2.5 rounded-xl bg-white/50 dark:bg-slate-800/50 border-2 border-slate-200 dark:border-slate-700 focus:border-indigo-500 dark:focus:border-indigo-400 focus:ring-4 focus:ring-indigo-500/10 transition-all outline-none text-sm"
+                        >
+                    </div>
+                    <!-- Status Filter Buttons -->
+                    <div class="flex flex-wrap items-center gap-2">
+                        <span class="text-sm font-medium text-slate-600 dark:text-slate-400 mr-1">Status:</span>
+                        <button type="button" id="filterAll" class="pr-filter-btn px-3 py-1.5 rounded-lg text-xs font-semibold border-2 transition-colors cursor-pointer bg-indigo-100 dark:bg-indigo-900/30 text-indigo-700 dark:text-indigo-300 border-indigo-400 dark:border-indigo-500" data-filter="all">All</button>
+                        <button type="button" id="filterMerged" class="pr-filter-btn px-3 py-1.5 rounded-lg text-xs font-semibold border-2 transition-colors cursor-pointer bg-slate-100 dark:bg-slate-800 text-slate-600 dark:text-slate-400 border-slate-200 dark:border-slate-700 hover:bg-green-50 dark:hover:bg-green-900/20 hover:text-green-700 dark:hover:text-green-300 hover:border-green-300 dark:hover:border-green-600" data-filter="merged">Merged</button>
+                        <button type="button" id="filterClosed" class="pr-filter-btn px-3 py-1.5 rounded-lg text-xs font-semibold border-2 transition-colors cursor-pointer bg-slate-100 dark:bg-slate-800 text-slate-600 dark:text-slate-400 border-slate-200 dark:border-slate-700 hover:bg-red-50 dark:hover:bg-red-900/20 hover:text-red-700 dark:hover:text-red-300 hover:border-red-300 dark:hover:border-red-600" data-filter="closed">Closed</button>
+                        <button type="button" id="filterOpen" class="pr-filter-btn px-3 py-1.5 rounded-lg text-xs font-semibold border-2 transition-colors cursor-pointer bg-slate-100 dark:bg-slate-800 text-slate-600 dark:text-slate-400 border-slate-200 dark:border-slate-700 hover:bg-blue-50 dark:hover:bg-blue-900/20 hover:text-blue-700 dark:hover:text-blue-300 hover:border-blue-300 dark:hover:border-blue-600" data-filter="open">Open</button>
+                    </div>
+                </div>
+
                 <div id="prList" class="space-y-3"></div>
                 <div id="prPagination"></div>
             </div>
