fix: improve accessibility for PR search and filter controls

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                 <div id="prFilters" class="mb-6 space-y-4">
                     <!-- Text Search -->
                     <div class="relative">
-                        <svg class="absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 text-slate-400 dark:text-slate-500 pointer-events-none" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                        <svg class="absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 text-slate-400 dark:text-slate-500 pointer-events-none" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
                             <circle cx="11" cy="11" r="8"></circle>
                             <path d="m21 21-4.35-4.35"></path>
                         </svg>
@@ -379,6 +379,7 @@
                             id="prSearchInput"
                             placeholder="Search PRs by title..."
                             class="w-full pl-10 pr-4 py-2.5 rounded-xl bg-white/50 dark:bg-slate-800/50 border-2 border-slate-200 dark:border-slate-700 focus:border-indigo-500 dark:focus:border-indigo-400 focus:ring-4 focus:ring-indigo-500/10 transition-all outline-none text-sm"
+                            aria-label="Search pull requests by title"
                         >
                     </div>
                     <!-- Status Filter Buttons -->
