--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                         >
                     </div>
                     <!-- Status Filter Buttons -->
-                    <div class="flex flex-wrap items-center gap-2">
+                    <div class="flex flex-wrap items-center gap-2" role="group" aria-label="Filter by status">
                         <span class="text-sm font-medium text-slate-600 dark:text-slate-400 mr-1">Status:</span>
                         <button type="button" id="filterAll" class="pr-filter-btn px-3 py-1.5 rounded-lg text-xs font-semibold border-2 transition-colors cursor-pointer bg-indigo-100 dark:bg-indigo-900/30 text-indigo-700 dark:text-indigo-300 border-indigo-400 dark:border-indigo-500" data-filter="all">All</button>
                         <button type="button" id="filterMerged" class="pr-filter-btn px-3 py-1.5 rounded-lg text-xs font-semibold border-2 transition-colors cursor-pointer bg-slate-100 dark:bg-slate-800 text-slate-600 dark:text-slate-400 border-slate-200 dark:border-slate-700 hover:bg-green-50 dark:hover:bg-green-900/20 hover:text-green-700 dark:hover:text-green-300 hover:border-green-300 dark:hover:border-green-600" data-filter="merged">Merged</button>
