--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <title>🤖 Copilot PR Analytics Dashboard</title>
     <link rel="stylesheet" href="./style.css">
     <meta name="description" content="GitHub Copilot Coding Agent PR Analytics Dashboard">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; connect-src 'self' https://api.github.com; img-src 'self' data: https://avatars.githubusercontent.com; font-src 'self';">
+    <link rel="preconnect" href="https://api.github.com" crossorigin>
 </head>
 <body class="antialiased bg-pattern">
+    <!-- Skip Link -->
+    <a href="#searchForm" class="sr-only focus:not-sr-only focus:absolute focus:top-2 focus:left-2 focus:z-[100] focus:px-4 focus:py-2 focus:rounded-lg focus:bg-indigo-600 focus:text-white focus:outline-none">Skip to main content</a>
+
     <!-- Background Gradient Overlay -->
     <div class="fixed inset-0 -z-10 bg-linear-to-br from-indigo-500/5 via-purple-500/5 to-pink-500/5"></div>
 
@@ -136,9 +141,11 @@
                         type="password"
                         id="tokenInput"
                         placeholder="ghp_..."
+                        autocomplete="off"
+                        aria-describedby="tokenDescription"
                         class="w-full px-4 py-3 rounded-xl bg-white/50 dark:bg-slate-800/50 border-2 border-slate-200 dark:border-slate-700 focus:border-indigo-500 dark:focus:border-indigo-400 focus:ring-4 focus:ring-indigo-500/10 transition-all outline-none"
                     >
-                    <p class="text-xs text-slate-600 dark:text-slate-400">Recommended to avoid API rate limits and access private repositories</p>
+                    <p id="tokenDescription" class="text-xs text-slate-600 dark:text-slate-400">Recommended to avoid API rate limits and access private repositories</p>
                 </div>
 
                 <!-- Submit Button -->
@@ -191,7 +198,7 @@
         </div>
 
         <!-- Error State -->
-        <div id="error" class="hidden">
+        <div id="error" class="hidden" role="alert" aria-live="assertive">
             <div class="glass-card rounded-2xl p-8 border-2 border-red-500/20 bg-red-50/50 dark:bg-red-950/50 dark:border-red-500/40">
                 <div class="flex items-start space-x-4">
                     <div class="shrink-0">
