--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>🤖 Copilot PR Analytics Dashboard</title>
     <link rel="stylesheet" href="./style.css">
     <meta name="description" content="GitHub Copilot Coding Agent PR Analytics Dashboard">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; connect-src 'self' https://api.github.com; img-src 'self' data: https://avatars.githubusercontent.com; font-src 'self';">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; connect-src 'self' https://api.github.com ws://localhost:* ws://127.0.0.1:*; img-src 'self' data: https://avatars.githubusercontent.com; font-src 'self';">
     <link rel="preconnect" href="https://api.github.com" crossorigin>
 </head>
 <body class="antialiased bg-pattern">
