--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
     <meta name="description" content="GitHub Copilot Coding Agent PR Analytics Dashboard">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; connect-src 'self' https://api.github.com ws://localhost:* ws://127.0.0.1:*; img-src 'self' data: https://avatars.githubusercontent.com; font-src 'self';">
-    <link rel="preconnect" href="https://api.github.com" crossorigin>
+    <link rel="preconnect" href="https://api.github.com">
 </head>
 <body class="antialiased bg-pattern">
     <!-- Skip Link -->
