fix: adjust layout classes for better responsiveness and alignment

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; connect-src 'self' https://api.github.com ws://localhost:* ws://127.0.0.1:*; img-src 'self' data: https://avatars.githubusercontent.com; font-src 'self';">
     <link rel="preconnect" href="https://api.github.com">
 </head>
-<body class="antialiased bg-pattern">
+<body class="antialiased bg-pattern min-h-screen flex flex-col">
     <!-- Skip Link -->
     <a href="#searchForm" class="sr-only focus:not-sr-only focus:absolute focus:top-2 focus:left-2 focus:z-[100] focus:px-4 focus:py-2 focus:rounded-lg focus:bg-indigo-600 focus:text-white focus:outline-none">Skip to main content</a>
 
@@ -53,7 +53,7 @@
     </header>
 
     <!-- Main Content -->
-    <main class="container mx-auto px-4 sm:px-6 lg:px-8 py-8">
+    <main class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 flex-grow">
         <!-- Search Form -->
         <div class="glass-card rounded-2xl p-6 mb-8">
             <div class="flex items-center space-x-3 mb-6">
@@ -407,8 +407,8 @@
     </main>
 
     <!-- Footer -->
-    <footer class="glass-card border-t border-white/10 mt-16">
-        <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8">
+    <footer class="glass-card border-t border-white/10 mt-auto">
+        <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-3">
             <div class="text-center space-y-2">
                 <div class="flex items-center justify-center space-x-2 text-slate-700 dark:text-slate-300">
                     <svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" aria-hidden="true">
