--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
                             </svg>
                         </div>
                         <div>
-                            <p class="text-sm font-medium text-slate-700 dark:text-slate-200">Repository-wide comparison data is not loaded yet</p>
-                            <p class="text-xs text-slate-500 dark:text-slate-400">Load to see PR ratios (Copilot / Total) and response time comparison (~4 API calls)</p>
+                            <p id="comparisonBannerTitle" class="text-sm font-medium text-slate-700 dark:text-slate-200">Repository-wide comparison data is not loaded yet</p>
+                            <p id="comparisonBannerSubtitle" class="text-xs text-slate-500 dark:text-slate-400">Load to see PR ratios (Copilot / Total) and response time comparison (~4 API calls)</p>
                         </div>
                     </div>
                     <button
