--- a/index.html
+++ b/index.html
@@ -440,6 +440,7 @@
                     </div>
                 </div>
                 <p id="responseTimeSubtitle" class="text-sm text-slate-500 dark:text-slate-400 mt-1 hidden"></p>
+                <p id="responseTimeWarning" class="text-xs text-amber-600 dark:text-amber-400 mt-1 hidden"></p>
                 <div id="responseTimeStats" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 hidden"></div>
                 <div id="responseTimeChart" class="h-64 w-full hidden"></div>
                 <div id="responseTimeEmpty" class="text-center py-8 hidden">
