feat: Implement date range splitting for GitHub API queries and enhance response time analysis UI

--- a/index.html
+++ b/index.html
@@ -221,8 +221,10 @@
             <!-- Stats Grid -->
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
                 <!-- Total PRs -->
-                <div class="glass-card rounded-2xl p-6 relative overflow-visible">
-                    <div class="absolute top-0 right-0 w-32 h-32 bg-linear-to-br from-indigo-500/10 to-purple-500/10 rounded-full -translate-y-16 translate-x-16"></div>
+                <div class="glass-card rounded-2xl p-6 relative">
+                    <div class="absolute inset-0 overflow-hidden rounded-2xl pointer-events-none">
+                        <div class="absolute top-0 right-0 w-32 h-32 bg-linear-to-br from-indigo-500/10 to-purple-500/10 rounded-full -translate-y-16 translate-x-16"></div>
+                    </div>
                     <div class="relative">
                         <div class="flex items-center justify-between mb-4">
                             <div class="p-3 rounded-xl bg-linear-to-br from-indigo-500 to-purple-500 shadow-lg">
@@ -253,8 +255,10 @@
                 </div>
 
                 <!-- Merged PRs -->
-                <div class="glass-card rounded-2xl p-6 relative overflow-visible">
-                    <div class="absolute top-0 right-0 w-32 h-32 bg-linear-to-br from-green-500/10 to-emerald-500/10 rounded-full -translate-y-16 translate-x-16"></div>
+                <div class="glass-card rounded-2xl p-6 relative">
+                    <div class="absolute inset-0 overflow-hidden rounded-2xl pointer-events-none">
+                        <div class="absolute top-0 right-0 w-32 h-32 bg-linear-to-br from-green-500/10 to-emerald-500/10 rounded-full -translate-y-16 translate-x-16"></div>
+                    </div>
                     <div class="relative">
                         <div class="flex items-center justify-between mb-4">
                             <div class="p-3 rounded-xl bg-linear-to-br from-green-500 to-emerald-500 shadow-lg">
@@ -281,8 +285,10 @@
                 </div>
 
                 <!-- Closed PRs -->
-                <div class="glass-card rounded-2xl p-6 relative overflow-visible">
-                    <div class="absolute top-0 right-0 w-32 h-32 bg-linear-to-br from-red-500/10 to-rose-500/10 rounded-full -translate-y-16 translate-x-16"></div>
+                <div class="glass-card rounded-2xl p-6 relative">
+                    <div class="absolute inset-0 overflow-hidden rounded-2xl pointer-events-none">
+                        <div class="absolute top-0 right-0 w-32 h-32 bg-linear-to-br from-red-500/10 to-rose-500/10 rounded-full -translate-y-16 translate-x-16"></div>
+                    </div>
                     <div class="relative">
                         <div class="flex items-center justify-between mb-4">
                             <div class="p-3 rounded-xl bg-linear-to-br from-red-500 to-rose-500 shadow-lg">
@@ -310,8 +316,10 @@
                 </div>
 
                 <!-- Open PRs -->
-                <div class="glass-card rounded-2xl p-6 relative overflow-visible">
-                    <div class="absolute top-0 right-0 w-32 h-32 bg-linear-to-br from-blue-500/10 to-cyan-500/10 rounded-full -translate-y-16 translate-x-16"></div>
+                <div class="glass-card rounded-2xl p-6 relative">
+                    <div class="absolute inset-0 overflow-hidden rounded-2xl pointer-events-none">
+                        <div class="absolute top-0 right-0 w-32 h-32 bg-linear-to-br from-blue-500/10 to-cyan-500/10 rounded-full -translate-y-16 translate-x-16"></div>
+                    </div>
                     <div class="relative">
                         <div class="flex items-center justify-between mb-4">
                             <div class="p-3 rounded-xl bg-linear-to-br from-blue-500 to-cyan-500 shadow-lg">
